[package]
name = "bdkgo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = "=0.25.0"
weedle2 = "=4.0.0"
thiserror = "1.0"
bincode = "1"
serde = { version = "1", features = ["derive"] }
bdk = { git = "https://github.com/bitcoindevkit/bdk.git", rev = "fbd1d656187859fcb7b84b177e7e9498c15537ea", features = ["keys-bip39"] }
bdk_file_store = { git = "https://github.com/bitcoindevkit/bdk.git", rev = "fbd1d656187859fcb7b84b177e7e9498c15537ea" }
rand = "0.8.5"

[build-dependencies]
uniffi = { version = "=0.25.0", features = [ "build" ] }
weedle2 = "=4.0.0"
